# gateway

./: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
components/: aws_provisioning.rar  ble_gatts.rar  ble_service.rar
components/aws_iot/: CMakeLists.txt
components/aws_iot/include/: aws_iot_config.h  aws_iot_error.h  aws_iot_jobs_interface.h  aws_iot_jobs_json.h  aws_iot_jobs_topics.h  aws_iot_jobs_types.h  aws_iot_json_utils.h  aws_iot_log.h  aws_iot_mqtt_client.h  aws_iot_mqtt_client_common_internal.h  aws_iot_mqtt_client_interface.h  aws_iot_shadow_actions.h  aws_iot_shadow_interface.h  aws_iot_shadow_json.h  aws_iot_shadow_json_data.h  aws_iot_shadow_key.h  aws_iot_shadow_records.h  aws_iot_version.h  network_interface.h  network_platform.h  threads_interface.h  threads_platform.h  timer_interface.h  timer_platform.h
components/aws_iot/src/: aws_iot_mqtt_client.c  network_mbedtls_wrapper.c
components/aws_provisioning/: CMakeLists.txt  aws_mqtt_config.h  user_mqtt.c  user_mqtt.h  user_mqtt_provisioning.c  user_mqtt_provisioning.h
components/aws_provisioning/include/: aws_mqtt_config.h  aws_mqtt_provisioning.h  user_mqtt.h
components/aws_provisioning/src/: aws_mqtt_provisioning.c  user_mqtt.c
components/ble_gatts/: CMakeLists.txt
components/ble_gatts/include/: user_ble_gatt.h
components/ble_gatts/src/: user_ble_gatt.c
components/ble_mesh/: CMakeLists.txt
components/ble_mesh/include/: ble_mesh.h  ble_mesh_message.h  ble_mesh_process.h  storage.h  user_console.h
components/ble_mesh/src/: ble_mesh.c  ble_mesh_message.cpp  ble_mesh_old.c  ble_mesh_process.cpp  storage.cpp  user_console.c
components/ble_service/: CMakeLists.txt  ble_main.c  ble_main.h  gatt_svr.c
components/ble_service/include/: ble_main.h  gatt_svr.h
components/ble_service/src/: ble_main.c  gatt_svr.c
components/common/: CMakeLists.txt  common.h
components/common/include/: Utils.h  common.h
components/common/src/: Utils.cpp  common.c
components/driver/: button.c  button.h  nvs.c  nvs.h
components/emonLib/: CMakeLists.txt
components/emonLib/include/: EmonLib.h
components/emonLib/src/: EmonLib.cpp
components/sntp_time/: CMakeLists.txt
components/sntp_time/include/: geoloc.h  sntp.h  timezone.h  user_time.h
components/sntp_time/src/: geoloc.c  sntp.c  timezone.c  user_time.cpp
components/system/: CMakeLists.txt
components/system/include/: nvs_header.h
components/system/src/: nvs.cpp
components/user_aws_v2/: CMakeLists.txt
components/user_aws_v2/include/: user_aws_v2.h  user_aws_v2_event.h
components/user_aws_v2/src/: user_aws_v2.c
components/user_driver/: CMakeLists.txt  button.c  button.h  user_adc.c  user_adc.h
components/user_task/: CMakeLists.txt
components/user_task/include/: JsonTransfer.h  aws_task.h  device_manager.h
components/user_task/src/: JsonMessage.cpp  JsonTransfer.cpp  aws_task.cpp  device_manager.cpp
components/user_wifi/: CMakeLists.txt  user_wifi.c  user_wifi.h  user_wifi_scan.c  user_wifi_scan.h
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  user_app.c  user_app.cpp  user_app.h
main/certs/: client.crt  client.key
